[package]
name = "wbrsorting"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] } 
rand = "0.7.3"
rocket = "0.4.4"
tempdir = "0.3.7"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]